manifests/pgadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4
          volumeMounts:
            - name: pg-admin-data
              mountPath: /var/lib/pgadmin
      volumes:
        - name: pg-admin-data
          persistentVolumeClaim:
            claimName: pg-admin-data
