manifests/mailhog-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd,default-mailhog-basic-auth@kubernetescrd
  name: mailhog-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: mailhog.madeirareport.pt
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mailhog-service
                port:
                  number: 8025

  tls:
    - hosts:
        - mailhog.madeirareport.pt
      secretName: api-madeirareport-pt-tls
